- Fix grid headers aligned to left - Upgrade systelab-preferences and systelab-translate to Angular 8 versions

--- a/src/app/systelab-components/sass/_agGrid.scss
+++ b/src/app/systelab-components/sass/_agGrid.scss
@@ -32,6 +32,7 @@ $icon-rowaction-font-size: 20px;
           display: flex;
           flex-direction: column;
           justify-content: center;
+          align-items: flex-start;
         }
       }
 
@@ -39,6 +40,7 @@ $icon-rowaction-font-size: 20px;
         padding: 0 5px;
         flex-direction: column;
         justify-content: center;
+        align-items: flex-start;
 
         > span {
           height: auto;
